Update 3.06 Select and determine cryptographic solutions.md

--- a/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
@@ -167,3 +167,76 @@ It states that a cryptographic system should remain secure even if everything ab
 ---
 
 ## 3.6.1 Cryptographic life cycle (e.g., keys, algorithm selection) ##
+
+Cryptography is not just about choosing a strong encryption algorithm; it involves a complete lifecycle that ensures the security and integrity of encrypted data throughout its existence. This lifecycle includes selecting the appropriate algorithm, managing encryption keys securely, and ensuring that encrypted data is handled correctly whether it is stored, transmitted, or actively being used.
+
+The first step in the cryptographic lifecycle is selecting the right encryption algorithm. This choice depends on several factors, including security requirements, performance, compliance needs, and system constraints.
+
+Encryption algorithms fall into two main categories:
+1. **Symmetric Encryption:** The same key is used for both encryption and decryption. It is fast and efficient but requires secure key distribution. Common symmetric algorithms include AES (Advanced Encryption Standard), 3DES (Triple DES), and ChaCha20.
+2. **Asymmetric Encryption:** Uses a pair of keys—one public and one private. This solves the key distribution problem but is computationally slower. Examples include RSA (Rivest-Shamir-Adleman), ECC (Elliptic Curve Cryptography).
+
+**Hashing** is a one-way cryptographic function used for integrity verification rather than confidentiality. It ensures that data has not been modified but does not allow reversal to the original content. Secure hashing algorithms include SHA-256, SHA-3, and BLAKE2. Hashing is often used for password storage, digital signatures, and data integrity verification.
+
+Selecting an encryption algorithm involves balancing security, efficiency, and compatibility:
+- Security Strength: Algorithms should withstand brute-force and cryptanalytic attacks for a reasonable time frame. AES-256, for example, is currently considered secure against known attacks.
+- Performance: Some algorithms are computationally expensive (e.g., RSA) and may not be suitable for resource-constrained environments like IoT devices.
+- Regulatory Compliance: Certain industries require approved encryption standards. For example, FIPS 140-2 mandates the use of validated cryptographic algorithms in federal systems.
+- Scalability: The algorithm should accommodate future security needs, such as transitioning to post-quantum cryptography when quantum computers become more practical.
+
+Even the strongest encryption algorithm is useless if its keys are poorly managed. Key management is the most critical aspect of cryptographic security, covering key generation, distribution, storage, rotation, and disposal.
+
+Keys should be generated using a cryptographically secure random number generator (CSPRNG) to prevent predictability. Poor randomness in key generation has led to real-world security breaches, such as weak SSH keys and predictable session tokens.
+
+:bulb: A Cryptographically Secure Random Number Generator (CSPRNG) is an algorithm that generates random numbers with strong entropy, making them unpredictable and resistant to attacks such as statistical analysis and backtracking, ensuring their suitability for cryptographic applications like key generation, nonce creation, and secure token generation.
+
+Once generated, keys must be securely stored. Best practices include:
+- Hardware Security Modules (HSMs): Dedicated devices that store and manage cryptographic keys securely.
+- Key Management Systems (KMS): Software-based solutions like AWS KMS and Microsoft Azure Key Vault provide secure key lifecycle management.
+- Secure Enclaves: Technologies like Intel SGX and ARM TrustZone protect cryptographic operations within isolated hardware environments.
+
+Securely distributing encryption keys is a major challenge, especially in asymmetric encryption. Common methods include:
+- Public Key Infrastructure (PKI): Uses a certificate authority (CA) to distribute and authenticate public keys.
+- Diffie-Hellman Key Exchange: A cryptographic protocol that allows two parties to establish a shared secret key over an untrusted network.
+- Quantum Key Distribution (QKD): A future-proof method using quantum mechanics to exchange encryption keys securely.
+
+Cryptographic keys should not be used indefinitely. Key rotation involves periodically generating new keys to minimize the impact of a compromised key. Organizations should follow:
+- Time-based rotation: Replacing keys after a set period (e.g., every six months).
+- Usage-based rotation: Replacing keys after a certain number of encryptions.
+- Automatic expiration: Keys should have a defined lifespan to prevent reuse beyond their intended security period.
+
+When a key is no longer needed or is suspected to be compromised, it should be revoked immediately. Key revocation is managed through certificate revocation lists (CRLs) and Online Certificate Status Protocol (OCSP) in PKI environments. Secure disposal techniques include zeroizing keys (overwriting memory) and physically destroying storage devices.
+
+### Open Questions ###
+
+1. What are the main types of encryption algorithms and how do they differ?
+<details>
+  <summary>Show answer</summary>
+Symmetric encryption uses the same key for encryption and decryption (e.g., AES, ChaCha20), making it fast but requiring secure key distribution. Asymmetric encryption uses a public/private key pair (e.g., RSA, ECC), solving the key distribution problem but at a higher computational cost.
+</details>
+
+2. Why is key management more critical than simply choosing a strong algorithm?
+<details>
+  <summary>Show answer</summary>
+Even the strongest algorithm fails if keys are weak or mishandled. Proper key management ensures keys are securely generated (using CSPRNG), stored (using HSMs, KMS, or secure enclaves), distributed (via PKI or Diffie-Hellman), rotated regularly, and securely revoked or destroyed when compromised.
+</details>
+
+3. What role does hashing play in cryptography compared to encryption?
+<details>
+  <summary>Show answer</summary>
+Hashing is a one-way function used for integrity verification, ensuring data hasn't been altered (e.g., SHA-256, SHA-3). Unlike encryption, hashing does not provide confidentiality and cannot be reversed to retrieve the original data.
+</details>
+
+4. How do compliance and performance affect algorithm selection?
+<details>
+  <summary>Show answer</summary>
+Industries with strict regulations (e.g., FIPS 140-2 for federal systems) require validated algorithms, while resource-constrained environments (e.g., IoT) may need lightweight algorithms with lower computational cost. The chosen algorithm must balance security strength, efficiency, and future scalability, including readiness for post-quantum cryptography.
+</details>
+
+5. What are key rotation and revocation, and why are they important?
+<details>
+  <summary>Show answer</summary>
+Key rotation involves periodically replacing keys (time-based, usage-based, or with automatic expiration) to limit damage if a key is compromised. Key revocation immediately invalidates compromised or obsolete keys using mechanisms like CRLs or OCSP and secure disposal methods such as zeroizing or physical destruction.
+</details>
+
+---
