Update 3.06 Select and determine cryptographic solutions.md

--- a/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
@@ -240,3 +240,97 @@ Key rotation involves periodically replacing keys (time-based, usage-based, or w
 </details>
 
 ---
+
+## 3.6.2 Cryptographic methods (e.g., symmetric, asymmetric, elliptic curves, quantum) ##
+
+Different cryptographic methods serve different purposes, each with its own strengths and weaknesses.
+
+One of the most widely used approaches is symmetric encryption, which relies on a single key for both encryption and decryption. This makes it efficient for encrypting large amounts of data, but it creates a challenge when securely sharing the key between parties. The most well-known symmetric algorithms include the **Advanced Encryption Standard (AES)**, which is widely used for securing data at rest and in transit. Older algorithms like DES and 3DES have become obsolete due to security vulnerabilities.
+
+Two fundamental approaches in symmetric encryption are stream ciphers and block ciphers. Both methods transform plaintext into ciphertext, but they operate in distinct ways, each with advantages and limitations. 
+A **stream cipher** encrypts data one bit or byte at a time, making it well-suited for real-time applications like secure video calls, voice communications, and wireless encryption. It generates a continuous stream of key-dependent pseudorandom bits, called a keystream, which is combined with the plaintext using an operation like XOR (exclusive OR). Since the encryption process is continuous, stream ciphers can encrypt data of any length without padding. They are typically faster and require fewer computational resources than block ciphers, making them ideal for low-power devices and high-speed network transmissions. However, their security depends heavily on key management. If the same keystream is used more than once (a key reuse attack), attackers can exploit the repetition to break the encryption.
+
+One of the most well-known stream ciphers is **RC4 (Rivest Cipher 4)**, which was widely used in protocols like WEP and SSL but is now considered insecure due to vulnerabilities in its key scheduling algorithm. Modern alternatives include **ChaCha20**, which provides better security and performance while avoiding the weaknesses of RC4.
+
+:bulb: While stream ciphers are efficient, they are vulnerable to bit-flipping attacks, where an attacker can manipulate individual bits in transit without corrupting the rest of the message. Proper implementation, such as using a unique nonce (a number used once) and secure key management, is crucial to maintaining their security.
+
+Unlike stream ciphers, **block ciphers** encrypt data in fixed-size blocks (e.g., 64-bit or 128-bit blocks). If the plaintext is shorter than the block size, padding is added to fill the remaining space. This makes block ciphers well-suited for encrypting structured data, such as files, databases, and email messages, where entire chunks of data need to be processed securely. Block ciphers apply multiple rounds of complex mathematical transformations, including substitution and transposition, to increase security. The encryption process introduces confusion (making the relationship between plaintext and ciphertext complex) and diffusion (spreading plaintext information across the ciphertext to prevent pattern detection).
+
+One of the most widely used block ciphers is AES (Advanced Encryption Standard), which supports key sizes of 128, 192, or 256 bits. AES has become the standard for securing sensitive data in government, finance, and cloud storage. Other older block ciphers include DES (Data Encryption Standard) and 3DES, both of which are now considered weak due to small key sizes and susceptibility to brute-force attacks.
+
+Block ciphers operate in different modes of operation, which define how blocks are processed. Some common modes include:
+
+- ECB (Electronic Codebook): The simplest mode, but insecure because identical plaintext blocks produce identical ciphertext blocks.
+- CBC (Cipher Block Chaining): Uses an initialization vector (IV) to add randomness, improving security over ECB.
+- CTR (Counter Mode): Converts a block cipher into a stream cipher by generating a keystream, allowing parallel encryption for better performance.
+- GCM (Galois/Counter Mode): Provides encryption and authentication, commonly used in TLS and VPNs.
+
+Block ciphers provide strong security when implemented correctly, but they require proper key management and initialization vector selection to avoid vulnerabilities. Improper implementation, such as reusing IVs in certain modes, can weaken encryption significantly.
+
+| Feature / Aspect               | **Stream Cipher**                                  | **Block Cipher**                                   |
+| ------------------------------ | -------------------------------------------------- | -------------------------------------------------- |
+| **Encryption method**          | Encrypts data bit-by-bit or byte-by-byte           | Encrypts fixed-size blocks (e.g., 128-bit)         |
+| **Key usage**                  | Generates a keystream from key + IV                | Uses key directly with block cipher algorithm      |
+| **Performance**                | Very fast for continuous or real-time streams      | Slower but more structured                         |
+| **Modes of operation**         | Not required (acts like its own mode)              | Requires modes (ECB, CBC, GCM, etc.)               |
+| **Diffusion / Error handling** | Errors affect only corresponding bits              | Errors corrupt entire block                        |
+| **Use cases**                  | Video/audio streaming, VPN traffic, wireless comms | File encryption, disk encryption, secure messaging |
+| **Examples**                   | RC4, ChaCha20                                      | AES, 3DES                                          |
+
+While symmetric encryption is fast and efficient, it cannot solve the problem of secure key exchange over an untrusted network. This is where **asymmetric encryption** becomes essential. Asymmetric cryptography, also called public-key encryption, uses a pair of keys: a public key that is shared openly and a private key that is kept secret. A sender can encrypt a message with the recipient’s public key, ensuring that only the recipient can decrypt it using their private key.
+
+Asymmetric encryption is widely used for securing online communications, including TLS (which protects web traffic) and secure email protocols like PGP. It also enables digital signatures, which prove that a message or document has not been tampered with and verify the sender’s identity. However, asymmetric encryption is computationally expensive and much slower than symmetric encryption. To balance performance and security, many systems use asymmetric encryption to exchange symmetric keys, combining the benefits of both methods.
+
+**Elliptic Curve Cryptography (ECC)** is a specialized form of asymmetric encryption that offers strong security with smaller key sizes. This makes it more efficient than traditional public-key algorithms like RSA. For example, ECC can provide the same level of security as a 2048-bit RSA key while using only a 256-bit ECC key. This efficiency makes ECC particularly useful for mobile devices, IoT, and blockchain applications where processing power and bandwidth are limited.
+
+Another area of cryptographic research is **quantum cryptography**, which addresses the future threat posed by quantum computers. Traditional encryption methods rely on mathematical problems that are difficult for classical computers to solve, but quantum computers could break them using advanced algorithms like Shor’s algorithm. To counter this, researchers are developing quantum-resistant cryptographic methods, known as post-quantum cryptography. Additionally, Quantum Key Distribution (QKD) offers a way to establish encryption keys using the principles of quantum mechanics, making it theoretically immune to eavesdropping. However, quantum cryptography is still in its early stages and not yet widely practical.
+
+### Open Questions ###
+
+1. What is the main advantage of symmetric encryption compared to asymmetric encryption?
+<details>
+  <summary>Show answer</summary>
+Symmetric encryption is significantly faster and more efficient, making it ideal for encrypting large amounts of data such as files, databases, or real-time network traffic.
+</details>
+
+2. Why is key distribution a challenge in symmetric encryption?
+<details>
+  <summary>Show answer</summary>
+Because the same secret key is used for both encryption and decryption, securely sharing it between parties over an untrusted network is difficult without risking interception.
+</details>
+
+3. How do stream ciphers differ from block ciphers in how they process data?
+<details>
+  <summary>Show answer</summary>
+Stream ciphers encrypt data bit-by-bit or byte-by-byte using a continuous keystream, while block ciphers encrypt data in fixed-size chunks, such as 128-bit blocks.
+</details>
+
+4. Why is reusing a keystream in a stream cipher dangerous?
+<details>
+  <summary>Show answer</summary>
+If the same keystream is used more than once, attackers can analyze the resulting ciphertexts to recover plaintext or keys through known-plaintext or XOR-based attacks.
+</details>
+
+5. What are common modes of operation for block ciphers, and why are they necessary?
+<details>
+  <summary>Show answer</summary>
+Modes like CBC, CTR, and GCM define how block ciphers handle data larger than one block and add features like randomness or authentication. Without these modes, block ciphers like AES could be vulnerable to pattern detection.
+</details>
+
+6. Why are DES and 3DES considered obsolete today?
+<details>
+  <summary>Show answer</summary>
+Both have small key sizes and are vulnerable to brute-force attacks, making them unsuitable for modern security requirements. AES has replaced them as the preferred standard.
+</details>
+
+7. How does asymmetric encryption complement symmetric encryption in secure systems?
+<details>
+  <summary>Show answer</summary>
+Asymmetric encryption (e.g., RSA or ECC) is often used to exchange symmetric keys securely, combining the performance of symmetric encryption with the secure key distribution of asymmetric methods.
+</details>
+
+8. What future threat do quantum computers pose to cryptography?
+<details>
+  <summary>Show answer</summary>
+Quantum algorithms like Shor’s algorithm could break widely used public-key systems such as RSA and ECC. This is driving research into post-quantum cryptography and quantum key distribution (QKD) to ensure long-term security.
+</details>
