Update 3.06 Select and determine cryptographic solutions.md

--- a/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
@@ -334,3 +334,22 @@ Asymmetric encryption (e.g., RSA or ECC) is often used to exchange symmetric key
   <summary>Show answer</summary>
 Quantum algorithms like Shor’s algorithm could break widely used public-key systems such as RSA and ECC. This is driving research into post-quantum cryptography and quantum key distribution (QKD) to ensure long-term security.
 </details>
+
+## Public key infrastructure (PKI)  (e.g., quantum key distribution) ##
+
+Public Key Infrastructure (PKI) is the foundation of secure digital communication. It provides a framework for managing encryption keys and digital certificates, ensuring authentication, confidentiality, integrity, and non-repudiation in online interactions. PKI enables secure data exchange by using asymmetric cryptography, which relies on a pair of public and private keys. It is widely used in securing websites, emails, documents, and even entire network infrastructures.
+
+At its core, PKI consists of a **hierarchy of trust** that revolves around a trusted authority called the Certificate Authority (CA). The CA issues digital certificates, which serve as electronic credentials that verify the identity of users, organizations, or devices. These certificates bind a public key to an entity, ensuring that communications and transactions are secure and verifiable. When a user accesses a website using HTTPS, for example, PKI ensures that the website’s certificate is valid and issued by a trusted CA.
+
+A key component of PKI is the process of key management. Every entity that participates in PKI has a key pair: a public key that is distributed openly and a private key that is kept secret. The security of the entire system depends on the protection of these private keys. If a private key is compromised, an attacker could impersonate the entity, decrypt confidential information, or forge signatures. To mitigate such risks, PKI includes mechanisms such as certificate revocation lists (CRLs) and online certificate status protocol (OCSP), which allow the system to revoke compromised or expired certificates.
+
+:bulb: CRLs are lists maintained by the Certificate Authority (CA) containing serial numbers of revoked certificates, updated periodically. To verify a certificate, users download the CRL and check if its serial number is listed. On the other hand, OCSP provides real-time certificate status by querying an OCSP responder for immediate validation, offering faster and more efficient verification than CRLs, which can be large and slower to update.
+
+PKI also plays a crucial role in digital signatures. When someone signs a document digitally, their private key generates a unique signature that others can verify using their public key. This process ensures that the document has not been altered and that it was indeed signed by the claimed individual. Digital signatures are legally recognized in many countries, making PKI essential for secure business transactions, legal agreements, and regulatory compliance.
+
+One of the biggest challenges in PKI is key distribution and trust. Users must trust that a CA is legitimate and follows strict security policies. In some cases, attackers have obtained fraudulent certificates from CAs, leading to security breaches. To enhance security, many organizations implement private PKI infrastructures rather than relying solely on public certificate authorities.
+
+As quantum computing advances, traditional PKI faces potential risks. Quantum computers could theoretically break current asymmetric encryption algorithms, rendering existing PKI systems vulnerable. To address this, researchers are developing quantum-resistant cryptographic algorithms and **Quantum Key Distribution (QKD)**. Unlike classical encryption, QKD leverages the principles of quantum mechanics to securely distribute cryptographic keys. Any attempt to intercept a quantum key alters its state, making eavesdropping detectable.
+
+:bulb: Quantum computing is a type of computing that uses the principles of quantum mechanics to process information in a radically different way than traditional computers. Instead of using bits, which are either 0 or 1, quantum computers use qubits that can represent both 0 and 1 simultaneously, allowing them to solve certain complex problems much faster.
+
