Update 3.06 Select and determine cryptographic solutions.md

--- a/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
@@ -335,6 +335,8 @@ Asymmetric encryption (e.g., RSA or ECC) is often used to exchange symmetric key
 Quantum algorithms like Shor’s algorithm could break widely used public-key systems such as RSA and ECC. This is driving research into post-quantum cryptography and quantum key distribution (QKD) to ensure long-term security.
 </details>
 
+---
+
 ## Public key infrastructure (PKI)  (e.g., quantum key distribution) ##
 
 Public Key Infrastructure (PKI) is the foundation of secure digital communication. It provides a framework for managing encryption keys and digital certificates, ensuring authentication, confidentiality, integrity, and non-repudiation in online interactions. PKI enables secure data exchange by using asymmetric cryptography, which relies on a pair of public and private keys. It is widely used in securing websites, emails, documents, and even entire network infrastructures.
@@ -353,3 +355,38 @@ As quantum computing advances, traditional PKI faces potential risks. Quantum co
 
 :bulb: Quantum computing is a type of computing that uses the principles of quantum mechanics to process information in a radically different way than traditional computers. Instead of using bits, which are either 0 or 1, quantum computers use qubits that can represent both 0 and 1 simultaneously, allowing them to solve certain complex problems much faster.
 
+### Open Questions ###
+
+1. How does PKI ensure secure communication between two parties?
+<details>
+  <summary>Show answer</summary>
+PKI ensures secure communication by using asymmetric cryptography, which involves a pair of keys—a public key and a private key. The public key is shared openly, while the private key remains secret. When one party encrypts data using the recipient’s public key, only the recipient’s private key can decrypt it. Additionally, PKI uses digital certificates issued by trusted Certificate Authorities (CAs) to verify the identity of entities, ensuring that the communication is both confidential and authenticated. This framework also provides integrity (detecting any tampering) and non-repudiation (proving who sent the data).
+</details>
+
+2. What role do Certificate Authorities (CAs) play in PKI, and why is their trustworthiness critical?
+<details>
+  <summary>Show answer</summary>
+CAs act as trusted third parties that issue and manage digital certificates. These certificates bind an entity’s identity to its public key, confirming that the key truly belongs to that entity. The trustworthiness of CAs is critical because if a CA is compromised or issues a fraudulent certificate, attackers can impersonate legitimate entities, intercept sensitive communications, or launch man-in-the-middle attacks. Therefore, strict security policies and regular audits are essential for maintaining the integrity of PKI.
+</details>
+
+3. How does PKI handle the problem of compromised or expired certificates?
+<details>
+  <summary>Show answer</summary>
+PKI addresses compromised or expired certificates through certificate revocation mechanisms, primarily Certificate Revocation Lists (CRLs) and the Online Certificate Status Protocol (OCSP).
+CRLs are periodically updated lists published by CAs containing the serial numbers of revoked certificates. Clients download these lists to check certificate validity.
+OCSP provides real-time validation by querying an OCSP responder to check a certificate’s status, offering faster and more efficient verification than downloading large CRLs.
+</details>
+
+4. In what ways is PKI used beyond securing websites, and why is it legally significant?
+<details>
+  <summary>Show answer</summary>
+PKI is used in multiple areas beyond HTTPS, including securing emails (S/MIME), protecting documents, authenticating devices in IoT networks, and enabling VPN access. One of its most significant uses is in digital signatures, where a private key signs a document, and others verify it using the public key. This guarantees the document’s integrity and authenticity. Digital signatures are legally recognized in many jurisdictions, making PKI crucial for business contracts, financial transactions, and regulatory compliance.
+</details>
+
+5. What are the future challenges PKI faces with quantum computing, and how is the industry preparing for it?
+<details>
+  <summary>Show answer</summary>
+Quantum computing poses a major challenge because it could break current asymmetric encryption algorithms like RSA and ECC, which form the backbone of PKI. Quantum algorithms, such as Shor’s algorithm, can factor large numbers exponentially faster than classical computers, rendering existing systems insecure. To counter this, researchers are developing post-quantum cryptographic algorithms and exploring Quantum Key Distribution (QKD), which uses quantum mechanics principles to detect eavesdropping and securely distribute keys.
+</details>
+
+---
