Update 3.06 Select and determine cryptographic solutions.md

--- a/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
@@ -390,3 +390,125 @@ Quantum computing poses a major challenge because it could break current asymmet
 </details>
 
 ---
+
+## 3.6.4 Key management practices (e.g., rotation)  ##
+
+Effective key management is essential for maintaining the security of cryptographic systems. Keys are the foundation of encryption, ensuring that data remains protected from unauthorized access. However, if keys are not properly managed, even the strongest encryption algorithms can be rendered useless. Key management involves the generation, storage, usage, rotation, and eventual destruction of cryptographic keys, ensuring they remain secure throughout their lifecycle.
+
+The security of any cryptographic system starts with **strong key generation**. Keys must be unpredictable and resistant to attacks, which means they should be generated using a cryptographically secure random number generator (CSPRNG). Poor key generation methods, such as using weak random sources or predictable patterns, can make encryption vulnerable to brute-force attacks.
+
+Key length is also a crucial factor. A longer key generally provides stronger security, but it must be chosen based on the algorithm in use. For example, AES encryption requires a minimum of 128-bit keys, though 256-bit keys are preferred for high-security applications. 
+
+:link: [NIST SP 800-133](https://csrc.nist.gov/pubs/sp/800/133/r2/final) discusses the generation of the keys to be managed and used by the approved cryptographic algorithms.
+
+Once a key is generated, it must be stored securely to prevent unauthorized access or exposure. Keys should never be hardcoded into software or stored in plaintext files. Instead, they should be protected within **hardware security modules (HSMs)**, secure enclaves, or **dedicated key management systems (KMS)**.
+
+:bulb: An application should never see or handle the key directly. It should only request cryptographic operations from a trusted module via secure APIs (PKCS #11, KMIP, JCE/JCA, etc.), ensuring that key material remains isolated, auditable, and resilient against compromise.
+
+```mermaid
+flowchart LR
+    subgraph Bad_Practice["❌ Bad Practice"]
+        A1[Hardcoded Keys in Source Code]
+        A2[Keys in Plaintext Files]
+        A3[Exposed in Environment Variables]
+        A1 --> Risk1[Reverse Engineering Risk]
+        A2 --> Risk2[Filesystem Compromise]
+        A3 --> Risk3[Credential Harvesting]
+    end
+
+    subgraph Good_Practice["✅ Good Practice"]
+        B1[Hardware Security Module - HSM]
+        B2[Secure Enclave - SGX, TrustZone]
+        B3[Key Management System - AWS KMS, Vault]
+        B1 --> SecureOps[Perform Crypto Ops Internally]
+        B2 --> SecureOps
+        B3 --> SecureOps
+        SecureOps --> NoKeyExposure[Keys Never Leave Secure Boundary]
+    end
+
+    Bad_Practice -.->|Avoid| Good_Practice
+
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
+
+To prevent a single point of failure, key management must incorporate principles of separation of duties, dual control, and split knowledge. These measures reduce the risk of insider threats and unauthorized key access.
+
+- **Separation of duties** ensures that no single individual has complete control over key management functions. For example, one person may generate the key while another is responsible for key distribution. This reduces the chances of a malicious insider compromising the key.
+- **Dual control** requires at least two authorized individuals to perform critical cryptographic operations, such as key generation or key recovery. This prevents a single person from acting alone in accessing or modifying key material.
+- **Split knowledge** further enhances security by dividing the key into multiple components, ensuring that no single individual has access to the entire key. This method is commonly used in highly secure environments, such as financial institutions and government agencies, to protect sensitive encryption keys.
+
+Cryptographic keys should not be used indefinitely. Over time, the risk of key compromise increases due to factors such as advanced attacks, key exposure, or computational advancements. To mitigate this risk, organizations implement key rotation and key changes at regular intervals.
+**Key rotation** involves replacing cryptographic keys periodically to reduce the impact of key exposure. When a key is rotated, the new key replaces the old key while ensuring data remains accessible. Some systems use automated key rotation, where keys are updated based on predefined schedules. **Key changes**, on the other hand, involve generating entirely new keys and re-encrypting data with the new keys. This is more resource-intensive than key rotation but is necessary when a key is suspected to be compromised.
+
+:bulb: Key wrapping is a technique where a new encryption key is used to securely encrypt and store the old key, allowing it to be safely rotated without exposing sensitive data. Dual encryption involves encrypting data with both the old and new keys during the transition period, ensuring that both keys can decrypt the data until the old key is fully phased out.
+
+Certain cryptographic protocols, such as TLS, use **session keys** that are regularly refreshed to minimize security risks. For example, **Perfect Forward Secrecy (PFS)** ensures that even if a session key is compromised, it cannot be used to decrypt past communications.
+
+When a cryptographic key is no longer needed, it must be securely destroyed to prevent recovery. Simply deleting a key from a file system is not enough, as data remnants can still be recovered using forensic techniques. Secure key destruction involves overwriting the key multiple times, using secure deletion algorithms, or physically destroying the storage medium that contained the key.
+
+For high-security environments, key destruction may involve cryptographic erasure, where the key is securely wiped from a hardware security module, making it irrecoverable. In some cases, physical destruction of hard drives or secure devices is necessary to ensure that keys cannot be retrieved.
+
+:link: [NIST SP 800-57](https://csrc.nist.gov/pubs/sp/800/57/pt1/r5/final) provides cryptographic key-management guidance.
+
+### Open Questions ###
+
+1. Why is strong key generation critical to cryptographic security?
+<details>
+  <summary>Show answer</summary>
+Even the strongest algorithms are ineffective if keys are weak or predictable. Keys must be generated using cryptographically secure random number generators (CSPRNGs) to ensure unpredictability and resistance to brute-force attacks. Standards like NIST SP 800-133 provide guidance on secure key generation.
+</details>
+
+2. How does key length affect the strength of an encryption system?
+<details>
+  <summary>Show answer</summary>
+Longer keys generally provide higher resistance to brute-force attacks. For example, AES requires a minimum 128-bit key, while 256-bit keys are recommended for high-security applications. However, key length must align with the chosen algorithm and performance requirements.
+</details>
+
+3. What are best practices for securely storing cryptographic keys?
+<details>
+  <summary>Show answer</summary>
+Keys should never be hardcoded into source code or stored in plaintext files. Instead, they must be stored inside Hardware Security Modules (HSMs), secure enclaves, or Key Management Systems (KMS). Applications should use secure APIs (PKCS #11, KMIP, JCE/JCA) to perform cryptographic operations without ever directly accessing the key material.
+</details>
+
+4. How do separation of duties, dual control, and split knowledge enhance key security?
+<details>
+  <summary>Show answer</summary>
+- Separation of duties: Prevents one person from controlling all key functions.
+- Dual control: Requires two authorized individuals for critical key operations.
+- Split knowledge: Divides keys into multiple components so no one individual ever has access to the entire key.
+
+These controls reduce insider threats and ensure no single point of compromise.
+</details>
+
+5. What is key rotation and why is it necessary?
+<details>
+  <summary>Show answer</summary>
+Key rotation replaces keys periodically to limit the damage if a key is compromised. Automated rotation schedules reduce administrative overhead. Techniques like key wrapping (encrypting old keys with new ones) or dual encryption (supporting both keys during transition) allow seamless updates without downtime.
+</details>
+
+6. How does Perfect Forward Secrecy (PFS) relate to key management?
+<details>
+  <summary>Show answer</summary>
+PFS ensures that compromise of one session key does not expose past communications. Protocols like TLS frequently refresh session keys using ephemeral key exchanges (e.g., ECDHE), limiting the risk of long-term key exposure.
+</details>
+
+7. What are secure methods for destroying cryptographic keys?
+<details>
+  <summary>Show answer</summary>
+Keys must be irreversibly destroyed when no longer needed. Options include:
+
+- Cryptographic erasure inside HSMs.
+
+- Overwriting keys using secure deletion algorithms.
+
+- Physical destruction of hardware (e.g., shredding drives).
+</details>
+
+8. What risks arise from improper key management even when strong algorithms are used?
+<details>
+  <summary>Show answer</summary>
+Improper management—such as poor key storage, failure to rotate keys, or inadequate access controls—can make even AES-256 vulnerable. Attackers may bypass encryption entirely by stealing keys rather than breaking algorithms, rendering the system insecure despite theoretically strong cryptography.
+</details>
+
+---
